created styling for sign-up and sign in page

--- a/client/destinations.html
+++ b/client/destinations.html
@@ -17,7 +17,7 @@
             <a href="./mission.html"><h4>OUR MISSION</h4></a>
             <a href="./destinations.html"><h4>DESTINATIONS</h4></a>
             <a href="./checkIn.html"><h4>CHECK IN</h4></a>
-            <a href="./reserve.html"><button id="reserve">RESERVE NOW</button></a>
+            <a href="./signIn.html"><button id="sign-in" class="button-box">LOG IN/SIGN UP</button></a>
         </div>
     </nav>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
